--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,16 +13,16 @@ pipeline {
             // Push docker image
             sh 'docker login --username=wxssaa --password=Lingerwx@123'
             sh 'docker image tag hello-world:0.0.2 wxssaa/hello-world:0.0.2'
-            sh 'docker image push wxssaa/hello-world:0.0.2'
+            // sh 'docker image push wxssaa/hello-world:0.0.2'
          }
       }
       stage('Deploy') {
          steps {
             // Pull docker image
-            //sh 'docker image pull wxssaa/hello-world:0.0.2'
+            // sh 'docker image pull wxssaa/hello-world:0.0.2'
             
             // Remove old container
-            //sh 'docker rm -f hello-world || echo "Container app already deleted."'
+            // sh 'docker rm -f hello-world || echo "Container app already deleted."'
             
             // Run docker image
             sh 'kubectl create -f deployment.yaml'
